# Bizmate

Project/: README.md  app.py  data_preprocessing.py  ml_models.py  pyproject.toml
Project/attached_assets/: problemandsolution.txt
