[project]
name = "Bizmate"
version = "0.1.0"
description = "Stock Price Prediction Application"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.51.0",
    "yfinance>=0.2.32",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.15.0",
    "plotly>=5.17.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
[tool.poetry]
package-mode = false
